# usn_reader

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  reader.rs  usn_journal.rs  usn_journal_data.rs  usn_journal_record.rs  usn_journal_record_iter.rs  usn_record.rs  util.rs  volume_handle.rs  windows_string.rs
src/raw/: mod.rs  parser.rs  usn_journal_wrapper.rs  volume_handle.rs  windows.rs
src/util/: mod.rs  windows_version.rs
