[package]
name = "usn_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#windows = ["dep:windows"]
#winapi = []

[dependencies]
widestring = "0.5.1"
anyhow = "1"

[dependencies.winapi]
version = "0.3"

[dependencies.windows]
version = "*"
#optional = true
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem"
]
